src/test/resources/inspections/implicit_types.lua
local unknownType
local unknownType2
unknownType = <error descr="Type mismatch. Required: 'void' Found: 'void'">unknownType2</error>

